Validador para expeidición de resoluciones
